# PCL-rs

./: .gitignore  Cargo.toml  README.md  build.rs  screenshot.ps1
docs/: migration-guide.md
src/: main.rs
ui/: app_window.slint  base_panel.slint  demo.slint  mainwindow.slint
ui/components/: button.slint  card.slint  checkbox.slint  combo_box.slint  extra_button.slint  extra_text_button.slint  font_selector.slint  hint.slint  icon_button.slint  icon_text_button.slint  list_item.slint  loading.slint  menu.slint  msg.slint  page_base.slint  radiobox.slint  scroll_viewer.slint  search_box.slint  slider.slint  text_box.slint  text_button.slint  toast.slint
ui/theme/: theme.slint
ui/widgets/: comp_item.slint  instance_item.slint  local_mod_item.slint  minecraft_server.slint  msg_login.slint  my_skin.slint  news_item.slint  row_base.slint  save_item.slint  screenshot_item.slint  server_card.slint  task_item.slint  version_item.slint
