[package]
name = "pcl-rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "PCL-RS"
path = "src/main.rs"

[dependencies]
slint = "1.16.1"

[build-dependencies]
slint-build = "1.16.1"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
debug = false
incremental = false

[profile.release.package."*"]
opt-level = "s"
